# ferridock

./: .gitignore  Cargo.toml  README.md
example/: config.yaml  local-config.yaml
src/: appconfig.rs  main.rs
src/routes/: apierror.rs  management.rs  mod.rs  pull.rs  push.rs
src/storage/: common.rs  error.rs  mod.rs  storage.rs
