[package]
name = "ferridock"
version = "0.1.0"
edition = "2021"
author= "Nayan Sonawane"

[dependencies]
actix-web = "4.8.0"
derive_builder = "0.20.1"
env_logger = "0.11.5"
log = "0.4.22"
oci-spec = "0.6.8"
qstring = "0.7.2"
serde = { version = "1.0.204", features = ["serde_derive"] }
serde_json = "1.0.122"
sha2 = "0.10.8"
thiserror = "1.0.63"
uuid = { version = "1.10.0", features = ["v4","fast-rng","macro-diagnostics"]}
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
opendal = { version = "0.51.2", features = ["services-fs", "services-s3"] }
serde_yaml = "0.9.34"

[profile.release]
lto = true
opt-level = "z" 